feat(core) Add images/port update
update index html styles and task

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav>
       <ul>
-        <li><a href="#TropicalVacation">Tropical Vacation</a></li>
+        <li><a href="TropicalVacation">Tropical Vacation</a></li>
         <li><a href="#ArticVacation">Artic Vacation</a></li>
         <li><a href="#Cruise">Cruise</a></li>
       </ul>
@@ -24,7 +24,7 @@
 
     <section>
       <h1 id="TropicalVacation" style="color:black;">Tropical Vacation</h1>
-        <p>
+        <p class="awesome" style="text-decoration: underline;">
           Indulge yourself in a tropical destination to get away from those winter blues.
           You can relax on the beach or take any tour to our multiple tourist locations.
         </p>
@@ -40,8 +40,8 @@
         </ul>
 
 
-      <h1 id="ArticVacation" style="color:black;">Arctic Vacation</h1>
-        <p>
+      <h2 id="ArticVacation" style="color:black;">Arctic Vacation</h2>
+        <p class="hot">
           Enjoy a vacation in the Arctic.  You can see cool iceburgs sprouting form the ocean.
           you can also see the great wild life.
         </p>
@@ -49,7 +49,7 @@
           width="700"
           alt="glacier on water"
           />
-        <ul>
+        <ul class="size">
           <li><a href="http://www.polarcruises.com/arctic" target="_blank"/>Adventurous</a></li>
           <li>Unlike any other vacation</li>
         </ul>
