feat(core) Add id to tropical
very small error-debugging?

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav>
       <ul>
-        <li><a href="TropicalVacation">Tropical Vacation</a></li>
+        <li><a href="#TropicalVacation">Tropical Vacation</a></li>
         <li><a href="#ArticVacation">Artic Vacation</a></li>
         <li><a href="#Cruise">Cruise</a></li>
       </ul>
