--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
     <ul>
   </div>
     </header>
-    <div class="headerbreak"></div>
-    <div class="box">Button</div>
-    <div class="box">Button</div>
+    <div id="largebox">
+      <div id="box1"></div>
+        <div id="box2"></div>
+          <div id="box3"></div>
+     </div>
+        <div class="headerbreak"></div>
+          <div class="box">Button</div>
+            <div class="box">Button</div>
 
    <nav>
       <ul>
@@ -88,6 +93,7 @@
     <footer>
         <p>This is Chelsea's footer...sup ya'll</p>
     </footer>
+
 </main>
   </body>
 </html>
