--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/anchors.css">
   </head>
-
-  <body>
+   <body>
     <main>
     <header>
       <div class="headercontent">
@@ -17,35 +16,18 @@
         I <span>love</span> seeing the world, so I'm making a site about traveling.
       </p>
   </div>
-  <div class="center" class="nav">
+  <div class="thisishard" class="nav">
     <ul>
-      <li><a href="#">Tropical</a><li>
-      <li><a href="#">Arctic</a><li>
-      <li><a href="#">Cruise</a><li>
-      <li><a href="#">My Favorite</a><li>
-    <ul>
-  </div>
+      <li><a href="#">hello</a><li>
+      <li><a class="float2" href="#">Arctic</a><li>
+      </div>
+  <div class="box">Contact me</div>
+    <div class="box">Sign up</div>
     </header>
-    <div id="largebox">
-      <div id="box1"></div>
-        <div id="box2"></div>
-          <div id="box3"></div>
-     </div>
+
         <div class="headerbreak"></div>
-          <div class="box">Button</div>
-            <div class="box">Button</div>
-
-   <nav>
-      <ul>
-        <li><a href="#TropicalVacation">Tropical Vacation</a></li>
-        <li><a href="#ArticVacation">Artic Vacation</a></li>
-        <li><a href="#Cruise">Cruise</a></li>
-      </ul>
-    </nav>
-
     <section>
-
-    <div>
+  <div>
       <h1 id="TropicalVacation" style="color:black;">Tropical Vacation</h1>
         <p class="awesome" style="text-decoration: underline;">
           Indulge yourself in a tropical destination to get away from those winter blues.
@@ -63,7 +45,7 @@
     </div>
   <div>
       <h2 id="ArticVacation" style="color:black;">Arctic Vacation</h2>
-        <p class="hot">
+        <p>
           Enjoy a vacation in the Arctic.  You can see cool iceburgs sprouting form the ocean.
           you can also see the great wild life.
         </p>
