--- a/index.html
+++ b/index.html
@@ -9,33 +9,27 @@
    <body>
     <main>
     <header>
-      <div class="headercontent">
       <title>Vacation</title>
-      <h1 class="center">Chelsea's Vacation Site</h1>
-      <p class="center">
+      <div class="headercontent">
+        <h1 class="class">Chelsea's Vacation Site</h1>
+      <p class="class">
         I <span>love</span> seeing the world, so I'm making a site about traveling.
       </p>
-  </div>
-  <div class="thisishard" class="nav">
-    <ul>
-      <li><a href="#">hello</a><li>
-      <li><a class="float2" href="#">Arctic</a><li>
-      </div>
+    </div>
   <div class="box">Contact me</div>
     <div class="box">Sign up</div>
-    </header>
-
-        <div class="headerbreak"></div>
+  </header>
+<div class="headerbreak"></div>
     <section>
-  <div>
-      <h1 id="TropicalVacation" style="color:black;">Tropical Vacation</h1>
+  <div id="box1">
+      <h1>Tropical Vacation</h1>
         <p class="awesome" style="text-decoration: underline;">
           Indulge yourself in a tropical destination to get away from those winter blues.
           You can relax on the beach or take any tour to our multiple tourist locations.
         </p>
-          <img class="size" src="./images/relax-on-beach.jpg"
+          <img class="imagesize" src="./images/relax-on-beach.jpg"
           alt="relax on beach" />
-        <p>
+         <p>
           Sometimes I like to check out Travelocity.com for great travel deals.  Here's a <a href="https://www.travelocity.com/" target="_blank">link </a>to that page.  Also, here is bullet list of items...because I want to make a list:
         </p>
         <ul>
@@ -43,14 +37,13 @@
           <li>Relaxing</li>
         </ul>
     </div>
-  <div>
-      <h2 id="ArticVacation" style="color:black;">Arctic Vacation</h2>
+  <div id="box2">
+      <h2>Arctic Vacation</h2>
         <p>
           Enjoy a vacation in the Arctic.  You can see cool iceburgs sprouting form the ocean.
           you can also see the great wild life.
         </p>
-        <img class="size" class="bridge" src="./images/polar-northern-lights.jpg"
-          width="700"
+        <img class="imagesize" class="bridge" src="./images/polar-northern-lights.jpg"
           alt="glacier on water"
           />
         <ul>
@@ -58,23 +51,22 @@
           <li>Unlike any other vacation</li>
         </ul>
   </div>
-    <div>
-        <h1 id="Cruise" style="color:black;">Cruise</h1>
+    <div id="box2">
+        <h3>Cruise</h3>
       <p>
         Lets go on a Cruise!  Are you someone who loves to just go go go and see everything
         they can and more when you are on a vacation?  If you are, then come enjoy a cruise
         where you can enjoy activites on the boat at sea or off the boat on our port destinations.
       </p>
-      <img class="size" src="./images/cruise-ship.jpg"/>
+      <img class="imagesize" class="bridge" src="./images/cruise-ship.jpg"
+        alt=""
+        />
       <ul>
         <li>You can enjoy many different destinations on one vacation</li>
         <li><a href="http://www.cruise.com/" target="_blank"/>On and off shore activities</a></li>
       </ul>
  </div>
     </section>
-    <footer>
-        <p>This is Chelsea's footer...sup ya'll</p>
-    </footer>
 
 </main>
   </body>
