--- a/index.html
+++ b/index.html
@@ -7,56 +7,53 @@
     <link rel="stylesheet" href="./styles/anchors.css">
   </head>
    <body>
+     <header>
+       <title>Vacation</title>
+       <div class="headercontent">
+         <h1 class="class">Chelsea's Vacation Site</h1>
+         <p class="class">
+           I <span>love</span> seeing the world, so I'm making a site about traveling.
+         </p>
+       </div>
+       <div class="button">Contact me</div>
+       <div class="button">Sign up</div>
+       <div class="clearfix"></div>
+     </header>
     <main>
-    <header>
-      <title>Vacation</title>
-      <div class="headercontent">
-        <h1 class="class">Chelsea's Vacation Site</h1>
-      <p class="class">
-        I <span>love</span> seeing the world, so I'm making a site about traveling.
-      </p>
-    </div>
-  <div class="box">Contact me</div>
-    <div class="box">Sign up</div>
-  </header>
-<div class="headerbreak"></div>
-    <section>
-  <div id="box1">
-      <h1>Tropical Vacation</h1>
-        <p class="awesome" style="text-decoration: underline;">
-          Indulge yourself in a tropical destination to get away from those winter blues.
-          You can relax on the beach or take any tour to our multiple tourist locations.
-        </p>
+      <div id="box1">
+          <h1>Tropical Vacation</h1>
+          <p class="awesome" style="text-decoration: underline;">
+            Indulge yourself in a tropical destination to get away from those winter blues.
+            You can relax on the beach or take any tour to our multiple tourist locations.
+          </p>
           <img class="imagesize" src="./images/relax-on-beach.jpg"
-          alt="relax on beach" />
-         <p>
-          Sometimes I like to check out Travelocity.com for great travel deals.  Here's a <a href="https://www.travelocity.com/" target="_blank">link </a>to that page.  Also, here is bullet list of items...because I want to make a list:
-        </p>
-        <ul>
-          <li>Fun</li>
-          <li>Relaxing</li>
-        </ul>
-    </div>
-  <div id="box2">
-      <h2>Arctic Vacation</h2>
-        <p>
-          Enjoy a vacation in the Arctic.  You can see cool iceburgs sprouting form the ocean.
-          you can also see the great wild life.
-        </p>
-        <img class="imagesize" class="bridge" src="./images/polar-northern-lights.jpg"
-          alt="glacier on water"
-          />
-        <ul>
-          <li>Adventurous</li>
-          <li>Unlike any other vacation</li>
-        </ul>
-  </div>
-    <div id="box2">
-        <h3>Cruise</h3>
-      <p>
-        Lets go on a Cruise!  Are you someone who loves to just go go go and see everything
-        they can and more when you are on a vacation?  If you are, then come enjoy a cruise
-        where you can enjoy activites on the boat at sea or off the boat on our port destinations.
+            alt="relax on beach" />
+          <p>
+            Sometimes I like to check out Travelocity.com for great travel deals.  Here's a <a href="https://www.travelocity.com/" target="_blank">link </a>to that page.  Also, here is bullet list of items...because I want to make a list:
+          </p>
+          <ul>
+            <li>Fun</li>
+            <li>Relaxing</li>
+          </ul>
+      </div>
+      <div id="box2">
+          <h2>Arctic Vacation</h2>
+          <p>
+              Enjoy a vacation in the Arctic.  You can see cool iceburgs sprouting form the ocean.
+              you can also see the great wild life.
+          </p>
+          <img class="imagesize" class="bridge" src="./images/polar-northern-lights.jpg"
+              alt="glacier on water"
+              />
+          <ul>
+            <li>Adventurous</li>
+            <li>Unlike any other vacation</li>
+          </ul>
+      </div>
+    <div id="box3">
+     <h3>Cruise</h3>
+     <p>
+       Lets go on a Cruise!  Are you someone who loves to just go go go and see everything they can and more when you are on a vacation?  If you are, then come enjoy a cruise where you can enjoy activites on the boat at sea or off the boat on our port destinations.
       </p>
       <img class="imagesize" class="bridge" src="./images/cruise-ship.jpg"
         alt=""
@@ -65,9 +62,8 @@
         <li>You can enjoy many different destinations on one vacation</li>
         <li><a href="http://www.cruise.com/" target="_blank"/>On and off shore activities</a></li>
       </ul>
- </div>
-    </section>
+    </div>
 
-</main>
+  </main>
   </body>
 </html>
