WIP--Finished website

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
            I <span>love</span> seeing the world, so I'm making a site about traveling.
          </p>
        </div>
-       <div class="button">Contact me</div>
-       <div class="button">Sign up</div>
-       <div class="clearfix"></div>
-     </header>
+      </header>
+      <div class="button">Contact me</div>
+      <div class="button">Pick a destination</div>
+      <div class="clearfix"></div>
     <main>
-      <div id="box1">
+      <div class="column">
           <h1>Tropical Vacation</h1>
-          <p class="awesome" style="text-decoration: underline;">
+          <p>
             Indulge yourself in a tropical destination to get away from those winter blues.
             You can relax on the beach or take any tour to our multiple tourist locations.
           </p>
@@ -31,12 +31,12 @@
           <p>
             Sometimes I like to check out Travelocity.com for great travel deals.  Here's a <a href="https://www.travelocity.com/" target="_blank">link </a>to that page.  Also, here is bullet list of items...because I want to make a list:
           </p>
-          <ul>
-            <li>Fun</li>
+          <ul style="padding: 2em;">
+            <li>Fun</li></br>
             <li>Relaxing</li>
           </ul>
       </div>
-      <div id="box2">
+      <div class="column">
           <h2>Arctic Vacation</h2>
           <p>
               Enjoy a vacation in the Arctic.  You can see cool iceburgs sprouting form the ocean.
@@ -50,7 +50,7 @@
             <li>Unlike any other vacation</li>
           </ul>
       </div>
-    <div id="box3">
+    <div class="column">
      <h3>Cruise</h3>
      <p>
        Lets go on a Cruise!  Are you someone who loves to just go go go and see everything they can and more when you are on a vacation?  If you are, then come enjoy a cruise where you can enjoy activites on the boat at sea or off the boat on our port destinations.
@@ -63,7 +63,35 @@
         <li><a href="http://www.cruise.com/" target="_blank"/>On and off shore activities</a></li>
       </ul>
     </div>
-
+    <div class="clearfix"></div>
+  <div class="column">
+    <h4>Pretty Sunsets</h4>
+    <p>I love watching the sunsets they are verypretty and peaceful.  They always have so many different colors.</p>
+    <img class="imagesize" src="./images/walk-3641_640.jpg">
+    <ul style="padding:2em;">
+      <li>beautiful</li>
+      <li>peaceful</li>
+    <ul>
+  </div>
+  <div class="column">
+    <h5>Picture</h5>
+    <p>This is such a fun picture to look at I love it so much!</p>
+    <img class="imagesize" src="./images/glacier_water.jpg">
+    <ul style="padding: 2em;">
+      <li>Beautiful</li>
+      <li>Cold</li>
+    </ul>
+  </div>
+  <div class="clearfix"></div>
+  <ul>
+   <li><a href="#home">Home</a></li>
+   <li><a href="#news">News</a></li>
+   <li><a href="#contact">Contact</a></li>
+   <li style="float:right"><a class="active" href="#about">About</a></li>
+</ul>
+  <div class="clearfix"></div>
   </main>
+  <footer>Here is my footer
+  </footer>
   </body>
 </html>
