--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </ul>
   <div class="clearfix"></div>
   </main>
-  <footer>Here is my footer
+  <footer>Chelsea Hamilton
   </footer>
   </body>
 </html>
