final finish submitting assignment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <header>
        <title>Vacation</title>
        <div class="headercontent">
-         <h1 class="class">Chelsea's Vacation Site</h1>
+         <h1 class="samesize" class="class">Chelsea's Vacation Site</h1>
          <p class="class">
            I <span>love</span> seeing the world, so I'm making a site about traveling.
          </p>
@@ -37,7 +37,7 @@
           </ul>
       </div>
       <div class="column">
-          <h2>Arctic Vacation</h2>
+          <h2 class="samesize">Arctic Vacation</h2>
           <p>
               Enjoy a vacation in the Arctic.  You can see cool iceburgs sprouting form the ocean.
               you can also see the great wild life.
@@ -51,7 +51,7 @@
           </ul>
       </div>
     <div class="column">
-     <h3>Cruise</h3>
+     <h3 class="samesize">Cruise</h3>
      <p>
        Lets go on a Cruise!  Are you someone who loves to just go go go and see everything they can and more when you are on a vacation?  If you are, then come enjoy a cruise where you can enjoy activites on the boat at sea or off the boat on our port destinations.
       </p>
@@ -65,16 +65,16 @@
     </div>
     <div class="clearfix"></div>
   <div class="column">
-    <h4>Pretty Sunsets</h4>
+    <h4 class="samesize">Pretty Sunsets</h4>
     <p>I love watching the sunsets they are verypretty and peaceful.  They always have so many different colors.</p>
     <img class="imagesize" src="./images/walk-3641_640.jpg">
     <ul style="padding:2em;">
-      <li>beautiful</li>
-      <li>peaceful</li>
+      <li>Beautiful</li>
+      <li>Peaceful</li>
     <ul>
   </div>
   <div class="column">
-    <h5>Picture</h5>
+    <h5 class="samesize">Picture</h5>
     <p>This is such a fun picture to look at I love it so much!</p>
     <img class="imagesize" src="./images/glacier_water.jpg">
     <ul style="padding: 2em;">
