--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <header>
        <title>Vacation</title>
        <div class="headercontent">
-         <h1 class="samesize" class="class">Chelsea's Vacation Site</h1>
+         <h1 class="class">Chelsea's Vacation Site</h1>
          <p class="class">
            I <span>love</span> seeing the world, so I'm making a site about traveling.
          </p>
@@ -21,7 +21,7 @@
       <div class="clearfix"></div>
     <main>
       <div class="column">
-          <h1>Tropical Vacation</h1>
+          <h1 class="samesize">Tropical Vacation</h1>
           <p>
             Indulge yourself in a tropical destination to get away from those winter blues.
             You can relax on the beach or take any tour to our multiple tourist locations.
